feat(auth): implement AuthenticationController with DTOs and BCrypt in UserService